--- a/Utilities.EFCore31/Utilities.EFCore31.csproj
+++ b/Utilities.EFCore31/Utilities.EFCore31.csproj
@@ -5,6 +5,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>2.0.0</Version>
     <Authors>GataullinRR</Authors>
+    <PackageId>ABC.Utilities.EFCore31</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
